# foodcourt-sim

./: LICENSE  README.md  TODO.md  pyproject.toml
foodcourt_sim/: __init__.py  __main__.py  entities.py  enums.py  errors.py  levels.py  models.py  modules.py  operations.py  savefile.py  simulator.py  solution.py
tests/: test_levels.py  test_models.py  test_modules.py  test_savefile.py  test_simulator.py
tests/solutions/: 2twelve-7.solution  bellys-1.solution  bellys-3.solution  breakside-grill-4.solution  cafe-triste-1.solution  chaz-cheddar-1.solution  collision-test-1.solution  collision-test-2.solution  collision-test-3.solution  collision-test-4.solution  da-wings-1.solution  da-wings-2.solution  half-caff-coffee-1.solution  half-caff-coffee-2.solution  kazan-1.solution  kazan-10.solution  kazan-6.solution  kazan-9.solution  loop-testing-2.solution  mildreds-nook-1.solution  movement-testing-6.solution  movement-testing-8.solution  mr.-chilly-1.solution  mumbai-chaat-1.solution  mumbai-chaat-2.solution  mumbai-chaat-3.solution  on-the-fried-side-1.solution  soda-trench-3.solution  stacker-edge-case-1.solution  sushi-yeah!-15.solution  sushi-yeah!-2.solution  sushi-yeah!-3.solution  sushi-yeah!-5.solution  sweet-heat-bbq-2.solution  the-commissary-1.solution  the-commissary-2.solution  wine-oclock-2.solution  wine-oclock-6.solution  wine-oclock-8.solution  wine-oclock-illegal.solution
tests/solutions/yut23/: 2twelve-1.solution  2twelve-3.solution  2twelve-5.solution  bellys-2.solution  breakside-grill-1.solution  breakside-grill-2.solution  cafe-triste-2.solution  (+35 more)
