[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodcourt-sim"
authors = [
    {name = "Eric Johnson"},
]
description = "Save file parser for 20th Century Food Court"
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
dynamic = ["version"]
